--- a/public/main.css
+++ b/public/main.css
@@ -14,7 +14,7 @@ body {
     height: 100%;
 }
 
-.content {
+.fcc-sc-content {
 	/*height: 100%;*/
 	flex: 1 0 auto;
     background-color: #6761A8;
@@ -37,7 +37,7 @@ header {
     background-color: #2A2D34;
 }
 
-header .title {
+header .fcc-sc-title {
     font-weight: 900;
     padding: 1em;
     display: inline-block;
@@ -53,7 +53,7 @@ header .title {
 
 }
 @media (min-width: 768px) {
-    header .title {
+    header .fcc-sc-title {
         font-size: 1.5em;
     }
 }
@@ -61,45 +61,45 @@ header .title {
 footer {
     text-align: center;
     background-color: #2A2D34;
-    
+    /*height: 50px;*/
 }
-.element {
+footer .fcc-sc-element {
     display: inline-block;
     max-width: 160px;
     text-align: center;
 }
-.container {
+footer .fcc-sc-container {
     display: inline-block;
     width: auto;
     text-align: center;
 }
-.icon {
+footer .fcc-sc-icon {
     transition: .4s;
     border-radius: 50%;
     border: 1px solid;
     border-color: #009B72;
     padding: 5px;
     margin: .5em;
-    width: 24px;
-    height: 24px;
+    width: 36px;
+    height: 36px;
     
 }
-.icon:hover {
+footer .fcc-sc-icon:hover {
     border-color: #F26430;
     background-color: #F26430;
     fill: white;
 }
-footer a {
+footer .fcc-sc-a {
     color: #009B72;
     fill: #009B72;
 
     
 }
-footer a:hover {
+footer .fcc-sc-a:hover {
     color: #F26430;
 }
 
-.item {
+footer .fcc-sc-item {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -107,7 +107,7 @@ footer a:hover {
     font-size: .9em;
 }
 
-.link {
+footer .fcc-sc-link {
     margin: 5px auto 5px;
 }
 .chart-wrapper {
@@ -129,7 +129,7 @@ footer a:hover {
     /*justify-content: space-evenly;*/
     margin-bottom: 20px;
 }
-.card {
+.fcc-sc-card {
     width: 20%;
     /*height: 40px;*/
     background-color: #80899E;
@@ -144,12 +144,12 @@ footer a:hover {
     box-shadow: 3px 3px 19px 0px rgba(0,0,0,.5);
     position: relative;
 }
-.card .label {
+.fcc-sc-card .fcc-sc-label {
     display: inline-block;
     width: 70%;
     
 }
-.label .symbol {
+.fcc-sc-label .fcc-sc-symbol {
     font-size: 1em;
     font-weight: 900;
     text-overflow: ellipsis;
@@ -157,7 +157,7 @@ footer a:hover {
 
     /*width: 80%;*/
 }
-.label .name {
+.fcc-sc-label .fcc-sc-name {
     font-size: .9em;
     font-weight: 700;
     text-overflow: ellipsis;
@@ -171,12 +171,12 @@ footer a:hover {
     color: rgba(0, 0, 0, 0.54); 
 }*/
 
-.card .close:hover {
+.fcc-sc-card .fcc-sc-close:hover {
     color: rgba(0, 0, 0, 1); 
 }
 /*.material-icons.md-18 { font-size: 18px; }*/
 
-.card .close {
+.fcc-sc-card .fcc-sc-close {
     align-self: center;
     color: rgba(0, 0, 0, 0.54); 
     cursor: pointer;
@@ -191,7 +191,7 @@ footer a:hover {
     display: inline-block;
 }
 
-.search-bar {
+.fcc-sc-search-bar {
         
   background-color: #e9e9e9;
   padding: 1em;
@@ -199,7 +199,7 @@ footer a:hover {
 max-width: 100%;
 }
 
-.search-bar button {
+.fcc-sc-search-bar button {
   padding: 6px 10px;
   /*margin-top: 8px;
   margin-right: 16px;*/
@@ -209,11 +209,11 @@ max-width: 100%;
   cursor: pointer;
 }
 
-.search-bar button:hover {
+.fcc-sc-search-bar button:hover {
   background: #ccc;
 }
 
-.search-bar input[type=text] {
+.fcc-sc-search-bar input[type=text] {
   padding: 6px;
   /*margin-top: 8px;*/
   max-width: 100%;
@@ -225,7 +225,7 @@ text-overflow: ellipsis;
     overflow: hidden; 
 }
 
-.search-bar form {
+.fcc-sc-search-bar form {
 
     box-sizing: border-box;
     max-width: 100%;
@@ -233,9 +233,24 @@ text-overflow: ellipsis;
     /*width: 100%;*/
 }
 
-.search {
+.fcc-sc-search {
     margin-bottom: 10px;
     margin-left: 1px;
     max-width: 80%;
     display: inline-block;
+}
+
+#messageDialog #text {
+    font-family: 'Roboto', sans-serif; 
+    font-size: 1.2em;
+    color: #F26430;
+}
+
+.modal-footer {
+    justify-content: center;
+    border: none;
+}
+
+.modal-body {
+     text-align: center;
 }
