partially replace jquery

--- a/public/main.css
+++ b/public/main.css
@@ -139,6 +139,11 @@ footer .fcc-sc-link {
     display: inline-block;
     box-shadow: 3px 3px 19px 0px rgba(0,0,0,.5);
     position: relative;
+    transition: opacity .4s ease;
+}
+
+.fade {
+  opacity: 0;
 }
 
 @media (min-width: 768px) {
