Remove jquery, add class for local stock list, replace bootstrap dialog with vex dialog

--- a/public/main.css
+++ b/public/main.css
@@ -84,7 +84,7 @@ footer .fcc-sc-icon {
     margin: .5em;
     width: 36px;
     height: 36px;
-    
+    box-sizing: border-box;
 }
 footer .fcc-sc-icon:hover {
     border-color: #F26430;
