--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,3 @@
-
 html {
   background: white;
   height: 100%;
@@ -9,6 +8,7 @@ a {
   text-decoration: none !important;
   outline: none;
 }
+
 body {
   margin: 0;     
   display: flex;
@@ -16,25 +16,18 @@ body {
   height: 100%;
 }
 
-.fcc-sc-content {
+main.content {
   flex: 1 0 auto;
   background-color: #6761A8;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
 
-.chart-wrapper {
-  width: 80%; 
-}
-
-#chart {
-  width: 80%; 
-  height: 400px;
-  background-color: #2a2a2b;
+  .wrapper {
+    width: 80%; 
+    margin: 0 auto;
+  }
 }
 
 @import "header.scss";
 @import "searchbar.scss";
+@import "chart.scss";
 @import "cards.scss";
 @import "footer.scss";
